# PenguinCompiler

./: .gdb_history  .gitignore  CMakeLists.txt  Makefile  Readme.md  a.out  canon.hpp  graph.cpp  treeIR.cpp  treeIR.hpp
src/: assem.h  ast.h  main.cpp
src/backend/: canon.cpp  canon.hpp  color.cpp  color.hpp  combine.cpp  combine.hpp  flowgraph.cpp  flowgraph.hpp  graph.cpp  graph.hpp  ig.cpp  ig.hpp  liveness.cpp  liveness.hpp  regalloc.cpp  regalloc.hpp  tile.cpp  tile.hpp
src/frontend/: .gitignore  .parser.yacc.swp  lexer.cpp  lexer.lex  parser.cpp  parser.hpp  parser.yacc
src/ssa/: .gdb_history  AlgoExp.cpp  BuildSSA.cpp  BuildSSA.hpp  CDG.cpp  CDG.hpp  CFG.cpp  CFG.hpp  DFSCFG.cpp  DFSCFG.hpp  Dtree.cpp  Dtree.hpp  FuncInline.cpp  FuncInline.hpp  GVN.cpp  GVN.hpp  GVN_PRE.cpp  Loop.cpp  Loop.hpp  NaiveMemCE.cpp  PRE.cpp  SSAIR.hpp  conpro.cpp  constantPropagation.cpp  deadCodeElimilation.cpp  optimizer.cpp  optimizer.hpp  osr.cpp  quadruple.cpp  quadruple.hpp  test.cpp
src/structure/: assem.h  ast.cpp  ast.h  quad.cpp  tile.cpp  treeIR.cpp  treeIR.hpp  ty.hpp
src/util/: muldiv.cpp  muldiv.hpp  showIR.cpp  showIR.hpp  singleton.hpp  table.hpp  templabel.cpp  templabel.hpp  temptemp.cpp  temptemp.hpp  test_table.cpp  utils.hpp
test/script/: perf.sh  score.cpp  test-functional.sh
test/src/: test-asm.cpp  test-ast.cpp  test-ir.cpp
util/: templabel.hpp  temptemp.hpp
